Made some mistake with git.

--- a/data_analysis/results_20161107.md
+++ b/data_analysis/results_20161107.md
@@ -2,46 +2,46 @@
 
 Analysis was executed on the Wikidata JSON dump of 2016-11-07.
 
-**14396** root classes were found in **1,217,733** classes.
+**16148** root classes were found in **1299276** classes.
 
-Out of these **14396** root classes, ...
+Out of these **16148** root classes, ...
 
-* **12027** have an English label.
-* **10132** have an English or Simple English Wikipedia article.
-
----
-
-* **4.718** properties per class on average.
-* **1949** have no properties.
-* **2722** have one property.
-* **9725** have more than one property.
+* **13624** have an English label.
+* **11438** have an English or Simple English Wikipedia article.
 
 ---
 
-* **5.293** instances per class on average.
-* **3148** have no instances.
-* **6830** have one instance.
-* **4418** have more than one instance.
+* **4.8** properties per class on average.
+* **2007** have no properties.
+* **2988** have one property.
+* **11153** have more than one property.
 
 ---
 
-* **0.728** subclasses per class on average.
-* **10074** have no subclasses.
-* **2861** have one subclass.
-* **1461** have more than one subclass.
+* **4.69** instances per class on average.
+* **5122** have no instances.
+* **6640** have one instance.
+* **4386** have more than one instance.
+
+---
+
+* **0.86** subclasses per class on average.
+* **9852** have no subclasses.
+* **4306** have one subclass.
+* **1990** have more than one subclass.
 
 The 20 most frequent properties were ...
 
-1. [instance of (P31)](https://www.wikidata.org/wiki/Property:P31) with **7254** occurrences
-2. [Freebase ID (P646)](https://www.wikidata.org/wiki/Property:P646) with **6422** occurrences.
-3. [topic's main category (P910)](https://www.wikidata.org/wiki/Property:P910) with **5601** occurrences.
-4. [Commons category (P373)](https://www.wikidata.org/wiki/Property:P373) with 5453 occurrences.
-5. [image (P18)](https://www.wikidata.org/wiki/Property:P18) with 2025 occurrences.
-6. [GND ID (P227)](https://www.wikidata.org/wiki/Property:P227) with 1774 occurrences.
-7. [part of (P361)](https://www.wikidata.org/wiki/Property:P361) with 1644 occurrences.
-8. [country (P17)](https://www.wikidata.org/wiki/Property:P17) with 1292 occurrences.
-9. [Commons gallery (P935)](https://www.wikidata.org/wiki/Property:P935) with 1141 occurrences.
-10. [BNCF Thesaurus (P508)](https://www.wikidata.org/wiki/Property:P508) with 997 occurrences.
+1. [instance of (P31)](https://www.wikidata.org/wiki/Property:P31) with **8687** occurrences
+2. [Freebase ID (P646)](https://www.wikidata.org/wiki/Property:P646) with **7221** occurrences.
+3. [topic's main category (P910)](https://www.wikidata.org/wiki/Property:P910) with **6243** occurrences.
+4. [Commons category (P373)](https://www.wikidata.org/wiki/Property:P373) with **6183** occurrences.
+5. [image (P18)](https://www.wikidata.org/wiki/Property:P18) with **2367** occurrences.
+6. [GND ID (P227)](https://www.wikidata.org/wiki/Property:P227) with **1962** occurrences.
+7. [part of (P361)](https://www.wikidata.org/wiki/Property:P361) with **1769** occurrences.
+8. [country (P17)](https://www.wikidata.org/wiki/Property:P17) with **1557** occurrences.
+9. [Commons gallery (P935)](https://www.wikidata.org/wiki/Property:P935) with **1217** occurrences.
+10. [has as part (P527)](https://www.wikidata.org/wiki/Property:P527) with **1101** occurrences.
 
 Bar graphs for all root classes:
 
