Made some mistake with git.

--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -23,7 +23,7 @@
                2010},
   pages     = {1045--1048},
   year      = {2010},
-  url       = {http://www.isca-speech.org/archive/interspeech_2010/i10_1045.html},
+  url       = {http://www.isca-speech.org/archive/interspeech\_2010/i10\_1045.html},
   timestamp = {Thu, 09 Apr 2015 14:27:21 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/interspeech/MikolovKBCK10},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -34,7 +34,6 @@
 	year = {2002},
 	type = {Inproceedings},
 	author = {Viktor Pekar and Steffen Staab},
-	evastar_pdf = {2002_34_Pekar_Taxonomy_Learni_1.pdf}
 }
 @article{mikolov2013,
   author    = {Tomas Mikolov and
@@ -64,7 +63,7 @@
   publisher = {AAAI Press},
   timestamp = {2016-04-22T11:37:42.000+0200},
   title = {Deep Neural Networks for Learning Graph Representations.},
-  url = {http://dblp.uni-trier.de/db/conf/aaai/aaai2016.html#CaoLX16},
+  url = {http://dblp.uni-trier.de/db/conf/aaai/aaai2016.html\#CaoLX16},
   year = 2016
 }
 @article{Sperduti1997,
@@ -115,7 +114,7 @@ year = {1997}
   publisher = {ACM},
   timestamp = {2016-06-07T11:38:58.000+0200},
   title = {Ontology enrichment by discovering multi-relational association rules from ontological knowledge bases.},
-  url = {http://dblp.uni-trier.de/db/conf/sac/sac2016.html#dAmatoSTMG16},
+  url = {http://dblp.uni-trier.de/db/conf/sac/sac2016.html\#dAmatoSTMG16},
   year = 2016
 }
 @article{Wong2012,
@@ -225,3 +224,74 @@ year = {2009}
  publisher = {Morgan Kaufmann Publishers Inc.},
  address = {San Francisco, CA, USA},
 }
+@article{Niepert16,
+  author    = {Mathias Niepert and
+               Mohamed Ahmed and
+               Konstantin Kutzkov},
+  title     = {Learning Convolutional Neural Networks for Graphs},
+  journal   = {CoRR},
+  volume    = {abs/1605.05273},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1605.05273},
+  timestamp = {Wed, 01 Jun 2016 15:51:08 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/NiepertAK16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@inproceedings{Zhang2015,
+    author = {Zhang, Min-Ling and Zhou, Zhi-Hua},
+    citeulike-article-id = {1164920},
+    citeulike-linkout-0 = {http://ieeexplore.ieee.org/xpls/abs\_all.jsp?arnumber=1547385},
+    journal = {IEEE International Conference on Granular Computing},
+    organization = {The IEEE Computational Intelligence Society},
+    pages = {718--721 Vol. 2},
+    posted-at = {2011-03-21 06:26:51},
+    priority = {2},
+    title = {{A k-Nearest Neighbor Based Algorithm for Multi-label Classification}},
+    url = {http://ieeexplore.ieee.org/xpls/abs\_all.jsp?arnumber=1547385},
+    volume = {2},
+    year = {2005}
+}
+@misc{word2vec,
+  author = {Tomas Mikolov},
+  title = {word2vec Project},
+  year = {2013},
+ howpublished  = {https://code.google.com/archive/p/word2vec/},
+  urldate = {2013-06-30}
+}
+@article{Rodriguez2003,
+ author = {Rodr\'{\i}guez, M. Andrea and Egenhofer, Max J.},
+ title = {Determining Semantic Similarity Among Entity Classes from Different Ontologies},
+ journal = {IEEE Trans. on Knowl. and Data Eng.},
+ issue_date = {February 2003},
+ volume = {15},
+ number = {2},
+ month = feb,
+ year = {2003},
+ issn = {1041-4347},
+ pages = {442--456},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1109/TKDE.2003.1185844},
+ doi = {10.1109/TKDE.2003.1185844},
+ acmid = {642948},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+ keywords = {Semantic similarity, ontology integration, information integration, semantic interoperability, semantic matching.},
+}
+@inproceedings{Doan2002,
+ author = {Doan, AnHai and Madhavan, Jayant and Domingos, Pedro and Halevy, Alon},
+ title = {Learning to Map Between Ontologies on the Semantic Web},
+ booktitle = {Proceedings of the 11th International Conference on World Wide Web},
+ series = {WWW '02},
+ year = {2002},
+ isbn = {1-58113-449-5},
+ location = {Honolulu, Hawaii, USA},
+ pages = {662--673},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/511446.511532},
+ doi = {10.1145/511446.511532},
+ acmid = {511532},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {machine learning, ontology mapping, relaxation labeling, semantic web},
+} 
+
